<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Sudoku "</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lets_play"><i>Lets Play <b>Sudoku</b></i></string>
    <string name="play_button">Play</string>
    <string name="title_activity_single_game_page">SingleGamePageActivity</string>
    
    <!-- keypad numbers -->
    <string name="num1">1</string>
    <string name="num2"><b>2</b></string>
    <string name="num3">"3"</string>
    <string name="num4">"4"</string>
    <string name="num5">"5"</string>
    <string name="num6">"6"</string>
    <string name="num7">"7"</string>
    <string name="num8">"8"</string>
    <string name="num9">"9"</string>
</resources>
