<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="3"
    android:orientation="horizontal" >

    <Button
        android:id="@id/keypad_button_1"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/keypad_round_button"
        android:longClickable="true"
        android:onClick="keypadSetNote"
        android:text="@string/num1"
        android:textColor="#EFEFEF" />

    <Button
        android:id="@id/keypad_button_2"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/keypad_round_button"
        android:longClickable="true"
        android:onClick="keypadSetNote"
        android:text="@string/num2"
        android:textColor="@color/black_1" />

    <Button
        android:id="@id/keypad_button_3"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/keypad_round_button"
        android:gravity="center_vertical|center_horizontal"
        android:longClickable="true"
        android:onClick="keypadSetNote"
        android:text="@string/num3"
        android:textColor="@color/black_1" />

    <Button
        android:id="@id/keypad_button_4"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/keypad_round_button"
        android:gravity="center_vertical|center_horizontal"
        android:longClickable="true"
        android:onClick="keypadSetNote"
        android:text="@string/num4"
        android:textColor="@color/black_1" />

    <Button
        android:id="@id/keypad_button_5"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/keypad_round_button"
        android:gravity="center_vertical|center_horizontal"
        android:longClickable="true"
        android:onClick="keypadSetNote"
        android:text="@string/num5"
        android:textColor="@color/black_1" />

    <Button
        android:id="@id/keypad_button_6"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="3dp"
        android:background="@drawable/keypad_round_button"
        android:gravity="center_vertical|center_horizontal"
        android:longClickable="true"
        android:onClick="keypadSetNote"
        android:text="@string/num6"
        android:textColor="@color/black_1" />

    <Button
        android:id="@id/keypad_button_7"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/keypad_round_button"
        android:gravity="center_vertical|center_horizontal"
        android:longClickable="true"
        android:onClick="keypadSetNote"
        android:text="@string/num7"
        android:textColor="@color/black_1" />

    <Button
        android:id="@id/keypad_button_8"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/keypad_round_button"
        android:gravity="center_vertical|center_horizontal"
        android:longClickable="true"
        android:onClick="keypadSetNote"
        android:text="@string/num8"
        android:textColor="@color/black_1" />

    <Button
        android:id="@id/keypad_button_9"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="3dp"
        android:background="@drawable/keypad_round_button"
        android:gravity="center_vertical|center_horizontal"
        android:longClickable="true"
        android:onClick="keypadSetNote"
        android:text="@string/num9"
        android:textColor="@color/black_1" />

</GridLayout>